fix: Remove right text alignment from `.dev-value` style.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -298,7 +298,6 @@ pre {
 
   .dev-value {
     color: #fff;
-    text-align: right;
     word-break: break-word;
     font-weight: 500;
     font-family: 'SF Mono', Consolas, 'Liberation Mono', Menlo, monospace;
